syntax = "proto3";

option csharp_namespace = "Discount.GRPC.Protos";

service DiscountProtoService{
	rpc GetDiscount (GetDiscountRequest) returns (DiscountModel);
}

message GetDiscountRequest{
	string BookId = 1;
}

message DiscountModel{
	int32 Id = 1;
	string BookId = 2;
	int32 Discount = 3;
}
